Mon Aug 12 12:51:03 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makeconf: Comment out the lines that cause recursive makes into
	library subdirs.

Thu Aug  8 13:14:44 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* configure.in: Add AC_SUBST for `install_prefix'.
	* config.make.in (install_prefix, install_includedir): New
	variables.	
	* Makeconf (vpath %.defs): Look for these in install_includedir.
	
Wed Aug  7 14:57:55 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (prog-subdirs): Add `nfsd'.

Tue Aug  6 12:20:37 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Released source version 0.0.

Fri Aug  2 11:02:11 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makefile (cp-linked-files): Add missing hyphen to rule.
	(dist): Delete directory named for VERSION, not old var DATE.
	Build tar file from SRCDIR to avoid embedding an odd pathname in
	the archive.

Tue Jul 30 13:54:47 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* Makeconf (top_srcdirinc): Don't define EWOULDBLOCK anymore.

Sat Jul 20 15:42:43 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf (lndist): Find DISTFILES in $(srcdir).
	* Makefile (date): Delete vare.
	(version, dirname): New vars.
	(dist): Operate in $(srcdir).  Use $(dirname) for the tar dir name.
	(hurd-snap): Create in $(srcdir).

Thu Jul 18 00:40:04 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf (install): Depend on $(includedir)/$(installhdrsubdir).
	(install-headers): Likewise.
	($(includedir)/$(installhdrsubdir)): New rule.
	
	* Makeconf (vpath -l%): Tell make where to find -l libraries.

Wed Jul 17 22:49:50 1996  Roland McGrath  <roland@baalperazim.frob.com>

	* build.mkcf.in: Use top_srcdir instead of srcdir.

Wed Jul 17 14:28:29 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* Makeconf: gs/install-hdrs/install-headers/g
	* Makefile: Likewise.
